[package]
name = "unreal_build_tool"
version = "0.1.0"
edition = "2021"
author = "Sebastian Silva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.2.8", features = ["derive"] }
directories = "4.0.1"
serde = { version = "1.0.137", features = ["derive"]}
toml = "0.5.9"
